# insa-lyon-dataeng-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  overview.md  prepare_for_offline_use.sh
airflow/dags/: ingest_crime_reports_los_angeles.py  ingest_gta5_player_and_viewer_data.py  ingest_gta5_update_history.py  ingest_media_coverage_of_crime.py  prod_make_star_schema.py  prototype.py  pyproject.toml  trigger_entire_pipeline.py  util.py  wrangle_crime_reports.py  wrangle_gta5_player_and_viewer_data.py  wrangle_gta5_update_history.py  wrangle_media_coverage_of_crime.py
airflow/dags/offline_ingestion_zone/: cnn_mentions_collection.json  gta5_steam_player_data.csv  gta5_twitch_viewer_data.csv  gta5_update_history.csv
airflow/dags/sql/: create_star_schema.sql
docs/: links.md  overview.md
notebooks/: queries.ipynb
notebooks/.jupyter/: migrated
notebooks/.jupyter/lab/workspaces/: auto-x-7764.jupyterlab-workspace  default-37a8.jupyterlab-workspace
notebooks/.local/share/jupyter/: nbsignatures.db  notebook_secret
notebooks/.local/share/jupyter/runtime/: jupyter_cookie_secret
prototypes/: README.md  cnn_transcripts.py  datagov_download.py  pyproject.toml  requirements.txt  steam2.csv  steamdb_download.py  test.py
scraping/: README.md  requirements.txt  scrape_entire_cnn_transcripts.py  scrape_steamdb_selenium.py
